copy paste feature in the extension popup tab

--- a/manifest.json
+++ b/manifest.json
@@ -10,7 +10,9 @@
   },
   
   "permissions": [
-    "activeTab"
+    "activeTab",
+    "clipboardRead",
+    "clipboardWrite"
   ],
 
   "browser_action": {
