--- a/manifest.json
+++ b/manifest.json
@@ -10,6 +10,7 @@
   },
   
   "permissions": [
+    "<all_urls>",
     "activeTab",
     "clipboardRead",
     "clipboardWrite"
@@ -18,13 +19,11 @@
   "browser_action": {
     "default_icon": "assets/Butterfly.png",
     "default_title": "Emoji Translator",
-    "default_popup": "popup/index.html"
+    "default_popup": "popup/popup-content.html"
   },
 
-  "content_scripts": [
-    {
-      "matches": ["<all_urls>"],
-      "js": ["index.js"]
-    }
-  ]
+  "background" : {
+    "scripts": ["./backround-script.js"]
+  }
+
 }
