--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,7 @@
   "icons": {
     "48": "assets/icon.png"
   },
-  
+
   "permissions": [
     "<all_urls>",
     "activeTab",
@@ -34,6 +34,14 @@
   "browser_specific_settings":{
     "gecko":{
       "id": "emojitranslator@addons.com"
+    }
+  },
+
+  "commands": {
+    "_execute_browser_action": {
+      "suggested_key": {
+        "default": "Ctrl+E"
+      }
     }
   }
 
