--- a/manifest.json
+++ b/manifest.json
@@ -40,7 +40,8 @@
   "commands": {
     "_execute_browser_action": {
       "suggested_key": {
-        "default": "Ctrl+Period"
+        "default": "Ctrl+Period",
+        "mac": "MacCtrl+Period"
       }
     }
   }
